unpackaged/objects/SSIS_ERP_SKU_Metadata_Country_Connectio__c.object
<CustomObject>
  <description>This object manages the M:M relationships between the ERP/SKU Metadata/Company Code record and the Country/Global Setting record</description>
  <fields>
    <fullName>AX_Company_Code__c</fullName>
    <label>AX Company Code</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>If this field is checked the connection between Company code and the country is active.</description>
    <inlineHelpText>If this field is checked the connection between Company code and the country is active.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>Include_SKUs_without_Sales__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If this field is checked - all assigned (Local-Global) SKUs will be integrated. If this field is not checked only the SKUs with Sales will be integrated.</description>
    <inlineHelpText>If this field is checked - all assigned (Local-Global) SKUs will be integrated. If this field is not checked only the SKUs with Sales will be integrated.</inlineHelpText>
    <label>Include SKUs without Sales?</label>
    <type>Checkbox</type>
  </fields>
  <fields>
    <fullName>M3_Company_Code__c</fullName>
    <label>M3 Company Code</label>
    <length>50</length>
    <type>Text</type>
  </fields>
  <fields>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
      <restricted>true</restricted>
      <valueSetName>Market</valueSetName>
    </valueSet>
  </fields>
  <label>SSIS: ERP/SKU - Market Mapping</label>
  <listViews>
    <fullName>All</fullName>
    <columns>Market__c</columns>
    <columns>AX_Company_Code__c</columns>
    <columns>M3_Company_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
    <language>en_US</language>
  </listViews>
  <listViews>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Market__c</columns>
    <columns>AX_Company_Code__c</columns>
    <columns>M3_Company_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
  </listViews>
  <nameField>
    <displayFormat>{00000000}</displayFormat>
    <label>SSIS: ERP/SKU Metadata Country Connectio</label>
    <type>AutoNumber</type>
  </nameField>
  <pluralLabel>SSIS_ERP_SKU_Market_Mappings</pluralLabel>
  <sharingModel>Private</sharingModel>
</CustomObject>